docs: enhance README and add ShellCheck integration details
- Updated README.md to recommend installing ShellCheck for improved security detection.
- Added instructions for enabling ShellCheck integration in configuration.
- Expanded on security-relevant SC codes to highlight potential vulnerabilities.
- Prevent commits on main branch via pre-commit hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -62,6 +62,13 @@ repos:
       - id: conventional-pre-commit
         stages: [commit-msg]
 
+  # Prevent direct commits to main branch
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v6.0.0
+    hooks:
+      - id: no-commit-to-branch
+        args: [--branch, main, --branch, master]
+
 # Global configuration
 default_language_version:
   python: python3
